--- a/projects/ionic-selectable/src/lib/ionic-selectable.component.scss
+++ b/projects/ionic-selectable/src/lib/ionic-selectable.component.scss
@@ -205,10 +205,10 @@ $item-padding-end-ios: 8px;
   }
   &.ionic-selectable-modal-can-clear.ionic-selectable-modal-is-multiple {
     .footer .col:first-child {
-      padding-right: $padding / 2;
+      padding-right: calc($padding / 2);
     }
     .footer .col:last-child {
-      padding-left: $padding / 2;
+      padding-left: calc($padding / 2);
     }
   }
   &.ionic-selectable-modal-is-searching {
