--- a/projects/ionic-selectable/src/lib/ionic-selectable.component.html
+++ b/projects/ionic-selectable/src/lib/ionic-selectable.component.html
@@ -35,7 +35,7 @@
     <div class="ionic-selectable-icon-inner"></div>
   </div>
   <!-- Need to be type="button" otherwise click event triggers form ngSubmit. -->
-  <button (focus)="onButtonFocus()" (blur)="onButtonBlur()" class="ionic-selectable-cover" [disabled]="!isEnabled" tabindex="0"
+  <button [attr.aria-label]="_getLabelText()" (focus)="onButtonFocus()" (blur)="onButtonBlur()" class="ionic-selectable-cover" [disabled]="!isEnabled" tabindex="0"
     (click)="_click()" type="button">
   </button>
 </div>
